# SPDX-FileCopyrightText: 2022 Intevation GmbH <sebastian.wagner@intevation.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[metadata]
name = intelmq-webinput-csv
description = A web interface for interactively inserting one-off abuse-incident data in CSV format into IntelMQ.
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/Intevation/intelmq-certbund-contact
license =  AGPL-3.0-or-later
license_file = LICENSES/AGPL-3.0.txt
long_description = file: README.md
