# SPDX-FileCopyrightText: 2022-2023 Intevation GmbH <sebastian.wagner@intevation.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[pep8]
ignore = E221, E722, W504, E501

[pycodestyle]
ignore = E221, E722, W504, E501

[flake8]
ignore = E221, E722, W504, E501
exclude =
    .eggs/,
    .git/,
    __pycache__/,
    debian/,
    docs/,
    build/,
    dist/,

[metadata]
name = intelmq-webinput-csv
description = A web interface for interactively inserting one-off abuse-incident data in CSV format into IntelMQ.
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/Intevation/intelmq-certbund-contact
license =  AGPL-3.0-or-later
license_file = LICENSES/AGPL-3.0.txt
long_description = file: README.md
long_description_content_type = text/markdown
